# whisper-pronunciation-tuning

./: .gitignore  CUDA_SETUP.md  README.md  check_cuda.py  data_loader.py  demo_inference.py  install_pytorch_cuda.py  main.py  pronunciation_analyzer.py  pyproject.toml  whisper_pronunciation_trainer.py
